--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/helloTreGatti
     username: root
-    password: c620918fazuKl420
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     database: mysql
